syntax="proto3";

package project;

option go_package="./pb";

service ProjectService {
    rpc AddProject(AddSingleProjectReq) returns (AddSingleProjectRes) {};
}

message AddSingleProjectReq {
    string title = 1;
    string description = 2;
    int32 category = 3;
    string type = 4;
    double price = 5;
    int64 delivery_days = 6;
    int64 number_of_revisions = 7;
}

message CustomTier {
    string title = 1;
    string description = 2;
    int64 delivery_days = 3;
    int64 number_of_revisions = 4;
    double price = 5;
}

message AddSingleProjectRes{
    int64 status = 1;
    string Error = 2;
    string Response = 3;
}

